--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 
 # include template
 !/blog/index.php
-!/blog/css/*
-!/blog/bootstrap-comments.pgp
+!/blog/css/index.css
+!/blog/bootstrap-comments.php
 
